# stellar-guard

./: .gitignore  Cargo.toml  DEPLOYED_CONTRACTS.md  DEPLOYMENT_STATUS.md  README.md  jest.config.js  test-account.json  test-all-contracts.js  test-deployed-contract.js  test-reflector-real.js  test-xdr-fix.js
contracts/: Cargo.toml
contracts/liquidation/: Cargo.toml
contracts/liquidation/src/: lib.rs  reflector.rs
contracts/oracle_router/: Cargo.toml
contracts/oracle_router/src/: lib.rs
contracts/stop_loss/: Cargo.toml
contracts/stop_loss/src/: lib.rs  reflector.rs  test.rs
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml
frontend-v2/: .env.local.example  README.md  components.json  next.config.js  package.json  pnpm-lock.yaml  populate-orders.sh  tailwind.config.ts  test-final-fix.mjs  test-get-orders.js  test-oracle-native.js  test-oracle-v14.js  test-oracle-v2.js  test-oracle.js  test-orders-cli.sh  test-orders-comprehensive.js  test-query-orders.js  tsconfig.json
frontend-v2/app/: globals.css  layout.tsx  page.tsx
frontend-v2/components/: cyber-button.tsx  glitch-text.tsx  header.tsx  neon-card.tsx  providers.tsx  telegram-subscription.tsx  theme-provider.tsx  wallet-guard.tsx  web3-background.tsx
frontend-v2/lib/: stellar-wallets-kit.ts  stellar.ts
frontend-v2/services/: oracle-mock.ts  oracle-old.ts  oracle.ts  portfolio.ts  stop-loss-fixed.ts  stop-loss.ts  telegram.ts
frontend/app/: globals.css  layout.tsx  page-original.tsx  page.tsx
scripts/: deploy.sh
test/: reflector-integration.test.ts
(+63 files in other folders)
