[workspace]
resolver = "2"
members = [
    "stop_loss",
    "liquidation",
    "oracle_router",
]

[workspace.dependencies]
soroban-sdk = "23.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true